--- a/demoDTO2/src/main/resources/application.properties
+++ b/demoDTO2/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
